# RoboND-Kinematics-Project

./: .rosinstall  README.md  start_gazebo.sh  stomp_setup.sh  stomp_setup_all.sh
kr210_claw_moveit/config/: fake_controllers.yaml  kuka_arm.srdf  rgbd.yaml  scan.yaml  stomp_planning.yaml
kr210_claw_moveit/launch/: demo.launch  kuka_arm_moveit_sensor_manager.launch.xml  move_group.launch  moveit.rviz  postprocessing.launch  postprocessing_no_move_group.launch  sensor_manager.launch.xml  stomp_planning_pipeline.launch.xml
kr210_claw_moveit/params/: kr210.yaml
kuka_arm/: CMakeLists.txt
kuka_arm/config/: .gitignore  kr210_controllers.yaml  kuka_arm.rviz
kuka_arm/include/kuka_arm/: stomp_trajectory_sampler.h
kuka_arm/launch/: cafe.launch  cafe_replay.launch  gazebo.launch  inverse_kinematics.launch  self_filter.launch
kuka_arm/src/: stomp_trajectory_sampler.cpp
kuka_arm/urdf/: kr210.gazebo.xacro  kr210.urdf.xacro
kuka_arm/worlds/: cafe.world
saved_trajectories/: scan_0.yaml  scan_1.yaml  scan_10.yaml  scan_11.yaml  scan_12.yaml  scan_13.yaml  scan_14.yaml  scan_15.yaml  scan_16.yaml  scan_17.yaml  scan_18.yaml  scan_19.yaml  scan_2.yaml  scan_20.yaml  scan_21.yaml  scan_22.yaml  scan_23.yaml  scan_24.yaml  scan_3.yaml  scan_4.yaml  scan_5.yaml  scan_6.yaml  scan_7.yaml  scan_8.yaml  scan_9.yaml
scripts/: formatGoalPositions.py  formatGoalPositionsForPython.py  generateAndScanScene.py  loadWorld.sh  plan.sh  planPython.py  planPython.sh  runAllEvaluationTests.py  scanScene.py  scatterplot.py  start_moveit.sh  stompParameterEvaluation.sh  testStompParameters.py  utils.py
scripts/ergebnisse/: ergebnisse1710 (copy).yaml  ergebnisse1711 (copy).yaml  ergebnisse1711_2.yaml  ergebnisse_immer2devs_zusammen_05_10_20_bei_20_rollouts.yaml
